2006.12.27: David Nichols
	* fixed is_dev() function registration
	* finished implementing sort() with callback
	* added sort with callback tests and tests for is_*() functions

2006.12.26: David Nichols
	* fixed a race condition with QoreProgram::exportUserFunction()
	* started implementing sort() with a callback comparison function
	  and sortStable() or sorting with a stable sorting algorithm

2006.12.25: David Nichols
	* removed unused (and buggy) MemberList::copy() method
	* use a map for private object data, removed pviate KeyNode class and
	  greatly simplified the private KeyList class
	* added lib/ql_file.cc with is_file(), is_dir(), is_link(), 
	  is_readable(), etc
	* added setuid(), seteuid(), setgid(), and setegid() functions to 
	  lib/ql_lib.cc

2006.12.23: David Nichols
	* fixed a static memory leak in the OperatorList destructor

2006.12.21: David Nichols
	* extensive API updates for SMP performance improvements - updates
	  geared at reducing the number of cache invalidations resulting in
	  more than 2x speed improvement on SMP machines for the areas where
	  the optimizations have been implemented
	* Operator reorganization, now there are 2 operator types, "Operator",
	  and "BoolOperator" inheriting from "AbstractOperator".  BoolOperator
	  returns a bool instead of a QoreNode

2006.12.19: David Nichols
	* changes to make library API independent of debug flag

2006.12.18: David Nichols
	* lots of API cleanups
	* QoreNode cleanup

2006.12.17: David Nichols
	* ContextStatement api cleanup, catch and report more parse errors

2006.12.16: David Nichols
	* QoreSocket api cleanup

2006.12.15: David Nichols
	* more API cleanups
	* QoreNet cleanup, QoreURL cleanup, fixed url parsing so that '@' signs
	  can appear in the password field as with datasource parsing

2006.12.12: David Nichols
	* ModuleManager API cleanup
	* partial NamedScope cleanup
	* partial Operator cleanup

2006.12.11: David Nichols
	* more Datasource and ManagedDatasource cleanups