@@ -2,11 +2,15 @@
 	* fixed is_dev() function registration
 	* finished implementing sort() with callback
 	* added sort with callback tests and tests for is_*() functions
+	* implemented List::mergesort() and sortStable() using stl::stable_sort
+	  for sorting without a callback and List::mergesort() for
+	  sortStable() with a callback - sorting with a callback is 
+	  interruptible in case of an exception thrown by the callback function
 
 2006.12.26: David Nichols
 	* fixed a race condition with QoreProgram::exportUserFunction()
-	* started implementing sort() with a callback comparison function
-	  and sortStable() or sorting with a stable sorting algorithm
+	* started implementing sort() with a callback comparison function and 
+	  sortStable() or sorting with a stable sorting algorithm
 
 2006.12.25: David Nichols
 	* removed unused (and buggy) MemberList::copy() method
